gke/containerconfbglr18/networkpolicy/reject_reviews_from_all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-reject-reviews-from-all
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: reviews
  ingress: []
